samples/_failures_safe/1761527270_fe9e47_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99c051e6.c: In function ‘main’:
./samples/SAFE/__tmp_99c051e6.c:200:9: error: expected declaration or statement at end of input
  200 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_99c051e6.c:200:9: error: expected declaration or statement at end of input
